--- a/Mixpanel/New UI/assets/css/global.scss
+++ b/Mixpanel/New UI/assets/css/global.scss
@@ -28,7 +28,6 @@ h4 {
 	font-size: 12px;
 	line-height: 20px;
 	text-transform: uppercase;
-	color: $light_grey;
 }
 
 #pagewrap {
@@ -56,7 +55,7 @@ header {
 	border-bottom: 1px solid $border_grey;
 	align-self: flex-start;
 	position: relative;
-	z-index: 1;
+	z-index: 3;
 }
 
 .avatar {
@@ -91,6 +90,98 @@ header {
 	}
 }
 
+.project_menu {
+	width: 200px;
+	height: auto;
+	position: absolute;
+	z-index: 1;
+	top: 71px;
+	left: 71px;
+	// opacity: 0;
+	// visibility: hidden;
+}
+
+.project_menu menu {
+	padding: 0;
+	margin: 0;
+}
+
+.project_menu menu a {
+	font: 13px/28px $copy;
+	font-weight: bolder;
+	color: $light_grey;
+	border-bottom: 1px solid $border_grey;
+	border-right: 1px solid $border_grey;
+	padding: 6px 0 7px 15px;
+	display: block;
+	position: relative;
+	text-decoration: none;
+	background: $white;
+}
+
+.project_menu menu a:hover {
+	color: $dark_grey;
+}
+
+.project_menu menu a:nth-child(1) {
+	transform: translateY(-45px);
+	z-index: 5;
+	transition: transform 100ms cubic-bezier(0.000, 0.490, 0.520, 0.905) 100ms;
+}
+
+.project_menu menu a:nth-child(2) {
+	transform: translateY(-87px);
+	z-index: 4;
+	transition: transform 100ms cubic-bezier(0.000, 0.490, 0.520, 0.905) 75ms;
+}
+
+.project_menu menu a:nth-child(3) {
+	transform: translateY(-128px);
+	z-index: 3;
+	transition: transform 100ms cubic-bezier(0.000, 0.490, 0.520, 0.905) 50ms;
+}
+
+.project_menu menu a:nth-child(4) {
+	transform: translateY(-169px);
+	z-index: 2;
+	transition: transform 100ms cubic-bezier(0.000, 0.490, 0.520, 0.905) 25ms;
+}
+
+.project_menu menu a:nth-child(5) {
+	transform: translateY(-210px);
+	z-index: 1;
+	transition: transform 100ms cubic-bezier(0.000, 0.490, 0.520, 0.905) 0;
+}
+
+.project_menu.active menu a:nth-child(1) {
+	transform: translateY(0);
+	transition: transform 100ms cubic-bezier(0.000, 0.490, 0.520, 0.905) 0;
+}
+
+.project_menu.active menu a:nth-child(2) {
+	transform: translateY(0);
+	transition: transform 100ms cubic-bezier(0.000, 0.490, 0.520, 0.905) 25ms;
+}
+
+.project_menu.active menu a:nth-child(3) {
+	transform: translateY(0);
+	transition: transform 100ms cubic-bezier(0.000, 0.490, 0.520, 0.905) 50ms;
+}
+
+.project_menu.active menu a:nth-child(4) {
+	transform: translateY(0);
+	transition: transform 100ms cubic-bezier(0.000, 0.490, 0.520, 0.905) 75ms;
+}
+
+.project_menu.active menu a:nth-child(5) {
+	transform: translateY(0);
+	transition: transform 100ms cubic-bezier(0.000, 0.490, 0.520, 0.905) 100ms;
+}
+
+.project.active {
+	background: $white;
+}
+
 .project {
 	width: 200px;
 	height: 70px;
@@ -107,25 +198,27 @@ header {
 	margin-left: 71px;
 	background: $body_grey;
 
-	&:hover {
+	&:hover,
+	&.active {
 		background: $white;
 		color: $dark_grey;
 	}
-	&:hover .burger {
+	&:hover .burger,
+	&.active .burger {
 		background: $dark_grey;
 		&:before {
-			top: 7px;
+			top: 6px;
 			background: $dark_grey;
 			transition: top 150ms }
 		&:after {
-			bottom: 7px;
+			bottom: 6px;
 			background: $dark_grey;
 			transition: bottom 150ms }
 	}
 }
 
 .burger {
-	width: 15px;
+	width: 11px;
 	height: 2px;
 	border-radius: 5px;
 	background: $light_grey;
@@ -135,21 +228,21 @@ header {
 
 	&:before,
 	&:after {
-		width: 15px;
+		width: 11px;
 		height: 2px;
 		border-radius: 5px;
 		position: absolute;
 		content: "";
 		background: $light_grey;
 	}
-	&:before { top: 5px; transition: top 150ms }
-	&:after { bottom: 5px; transition: bottom 150ms }
+	&:before { top: 4px; transition: top 150ms }
+	&:after { bottom: 4px; transition: bottom 150ms }
 }
 
 .logo {
 	width: 8px;
 	height: 8px;
-	background: $dark_grey;
+	background: $light_grey;
 	border-radius: 50em;
 	position: absolute;
 	top: 31px;
@@ -159,7 +252,7 @@ header {
 	&:before,
 	&:after {
 		border-radius: 50em;
-		background: $dark_grey;
+		background: $light_grey;
 		position: absolute;
 		content: "";
 	}
@@ -187,6 +280,7 @@ header {
 	border-right: 1px solid $border_grey;
 	display: flex;
 	position: fixed;
+	z-index: 2;
 	background: $body_grey;
 	transition: margin 500ms cubic-bezier(0.000, 0.490, 0.520, 0.905), background 250ms cubic-bezier(0.000, 0.490, 0.520, 0.905);
 }
@@ -195,6 +289,55 @@ header {
 	margin: 0 0 0 0;
 	background: $white;
 	transition: margin 500ms, cubic-bezier(0.000, 0.490, 0.520, 0.905), background 250ms cubic-bezier(0.000, 0.490, 0.520, 0.905);
+}
+
+.drawer:hover .project_menu {
+	background: $body_grey;
+}
+
+.drawer figure.arrow {
+	width: 23px;
+	height: 23px;
+	display: flex;
+	align-items: center;
+	position: fixed;
+	top: 94px;
+	left: 24px;
+	margin: 0;
+	transform: rotateZ(-90deg);
+	transition: transform 300ms cubic-bezier(0.000, 0.490, 0.520, 0.905);
+
+	&:before,
+	&:after {
+		width: 11px;
+		height: 2px;
+		border-radius: 5px;
+		background: $light_grey;
+		display: block;
+		position: relative;
+		content: "";
+		transition: background 300ms;
+	}
+
+	&:before {
+		transform: rotateZ(45deg);
+		left: 2px;
+	}
+	&:after {
+		transform: rotateZ(-45deg);
+		right: 2px;
+	}
+}
+
+.drawer:hover figure.arrow {
+	transform: rotateZ(450deg);
+	transition: transform 300ms cubic-bezier(0.000, 0.490, 0.520, 0.905);
+}
+
+.drawer:hover figure.arrow:before,
+.drawer:hover figure.arrow:after {
+	background: $dark_grey;
+	transition: background 300ms;
 }
 
 .drawer:hover nav {
@@ -212,6 +355,7 @@ header {
 .drawer nav h4 {
 	margin: 25px 0 15px;
 	font-weight: 400;
+	color: $dark_grey;
 }
 
 .drawer nav span {
@@ -225,13 +369,14 @@ header {
 .drawer nav a {
 	font: 14px/30px $copy;
 	text-decoration: none;
-	color: $dark_grey;
+	color: $light_grey;
 	display: block;
 	padding-left: 30px;
+	font-weight: bolder;
 }
 
 .drawer nav a:hover {
-	color: $mp_blue;
+	color: $dark_grey;
 	border-right: 3px solid $mp_blue;
 }
 
