--- a/Mixpanel/New UI/assets/css/global.css
+++ b/Mixpanel/New UI/assets/css/global.css
@@ -373,7 +373,7 @@ header {
   top: 0;
   left: 0;
   display: flex;
-  padding: 130px 150px;
+  padding: 121px 71px 71px 141px;
   width: 100%;
   height: 100%;
   transition: background 500ms 2200ms;
@@ -400,5 +400,3 @@ header {
   color: #8c989e;
   transition: color 500ms;
 }
-
-/*# sourceMappingURL=global.css.map */
