--- a/Mixpanel/New UI/assets/css/global.scss
+++ b/Mixpanel/New UI/assets/css/global.scss
@@ -385,7 +385,7 @@ header {
 	top: 0;
 	left: 0;
 	display: flex;
-	padding: 130px 150px;
+	padding: 121px 71px 71px 141px;
 	width: 100%;
 	height: 100%;
 	transition: background 500ms 2200ms;
