--- a/Mixpanel/Mobile App/assets/css/global.css
+++ b/Mixpanel/Mobile App/assets/css/global.css
@@ -38,8 +38,50 @@ body, html {
 }
 
 /************ Typography STUFF ***********/
+.device {
+  width: 320px;
+  height: 568px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin: -280px 0 0 -164px;
+  overflow: hidden !important;
+  background: #000;
+}
+
 h1, h2, h3, h4, h5, h6, p {
   font-family: "din", sans-serif;
+}
+
+.bg-gradient {
+  position: fixed;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+}
+.bg-gradient.blue {
+  background-image: -moz-linear-gradient(-38deg, #011d41 8%, #014d7b 62%, #007cb4 100%);
+  background-image: -webkit-linear-gradient(-38deg, #011d41 8%, #014d7b 62%, #007cb4 100%);
+  background-image: -ms-linear-gradient(-38deg, #011d41 8%, #014d7b 62%, #007cb4 100%);
+}
+.bg-gradient.green {
+  background-image: -moz-linear-gradient(-53deg, #081d46 0%, #156058 56%, #22a26a 100%);
+  background-image: -webkit-linear-gradient(-53deg, #081d46 0%, #156058 56%, #22a26a 100%);
+  background-image: -ms-linear-gradient(-53deg, #081d46 0%, #156058 56%, #22a26a 100%);
+}
+.bg-gradient.purple {
+  background-image: -moz-linear-gradient(-53deg, #081d46 0%, #156058 56%, #22a26a 100%);
+  background-image: -webkit-linear-gradient(-53deg, #081d46 0%, #156058 56%, #22a26a 100%);
+  background-image: -ms-linear-gradient(-53deg, #081d46 0%, #156058 56%, #22a26a 100%);
+}
+
+.bg-gradient.active {
+  opacity: 1;
+  transition: opacity 400ms 300ms;
 }
 
 .phone-wrap {
@@ -49,16 +91,22 @@ h1, h2, h3, h4, h5, h6, p {
   top: 50%;
   left: 50%;
   margin: -280px 0 0 -164px;
-  right: 0;
-  bottom: 0;
   background-size: cover;
-  background-image: -moz-linear-gradient(-38deg, #011d41 8%, #014d7b 62%, #007cb4 100%);
-  background-image: -webkit-linear-gradient(-38deg, #011d41 8%, #014d7b 62%, #007cb4 100%);
-  background-image: -ms-linear-gradient(-38deg, #011d41 8%, #014d7b 62%, #007cb4 100%);
+  transform: scale(0.7);
+  opacity: .5;
+}
+
+.phone-wrap.ready {
+  opacity: 1;
+  transform: scale(1);
+  transition: transform 250ms 500ms, opacity 150ms 500ms;
 }
 
 .home {
   padding: 0 42px;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 input[type=text],
@@ -248,6 +296,160 @@ p {
 
 .verification_field {
   text-align: center;
+}
+
+.photo-bg {
+  background: url(../img/girl-background.png) no-repeat;
+  background-size: cover;
+  width: 320px;
+  height: 568px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin: -280px 0 0 -164px;
+}
+
+.photo-bg.hide {
+  transform: translateY(-568px);
+  visibility: hidden;
+  -webkit-transition: transform 500ms cubic-bezier(0.855, 0.095, 0.925, 0.7), visibility 0ms 500ms;
+}
+
+.intro-wrap {
+  position: relative;
+  padding: 35px 35px 0 35px;
+}
+
+.logo-small {
+  width: 80px;
+}
+
+.intro-wrap h1 {
+  font: bold 22px/24px "din", sans-serif;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: left;
+  margin-bottom: 3px;
+}
+.intro-wrap h1 span {
+  color: #3597E9;
+  display: block;
+}
+
+.intro-wrap p {
+  font: normal 17px/21px "din", sans-serif;
+  color: rgba(255, 255, 255, 0.6);
+  text-align: left;
+  margin: 0;
+  width: 88%;
+}
+.intro-wrap p.big {
+  width: 100%;
+}
+
+.sign-in-bug,
+.sign-in-top {
+  font: bold 14px/18px "din", sans-serif;
+  color: rgba(255, 255, 255, 0.5);
+  text-align: center;
+  display: block;
+  margin: 0;
+  text-transform: uppercase;
+  cursor: pointer;
+  position: fixed;
+}
+
+.sign-in-bug {
+  transform: translateY(456px);
+  width: 240px;
+}
+
+.sign-in-top {
+  text-align: right;
+  transform: translate3D(209px, -27px, 0);
+  text-transform: none;
+  color: rgba(255, 255, 255, 0.35);
+  font-weight: normal;
+}
+
+.intro-wrap .content {
+  position: fixed;
+  transform: translateY(290px);
+}
+
+.intro-time {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.intro-time.active {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 250ms, visibility;
+}
+
+.report {
+  position: fixed;
+  opacity: 0;
+}
+.report.three {
+  width: 184px;
+  transform: translate3D(-40px, 92px, 0);
+}
+.report.two {
+  width: 164px;
+  transform: translate3D(88px, 50px, 0);
+}
+.report.one {
+  width: 164px;
+  transform: translate3D(135px, 180px, 0);
+}
+
+.intro-time .step.one .content {
+  opacity: 0;
+  transform: translateY(310px);
+}
+
+.intro-time.active .step.one .content {
+  opacity: 1;
+  transform: translateY(290px);
+  transition: opacity 200ms 600ms, transform 350ms 600ms;
+}
+
+.intro-time.active .report {
+  opacity: 1;
+  -webkit-transition: transform 600ms cubic-bezier(0, 0.055, 0, 1) 500ms, opacity 200ms 500ms;
+}
+.intro-time.active .report.three {
+  transform: translate3D(-20px, 112px, 0);
+}
+.intro-time.active .report.two {
+  transform: translate3D(68px, 70px, 0);
+}
+.intro-time.active .report.one {
+  transform: translate3D(115px, 160px, 0);
+}
+
+.indicator {
+  position: fixed;
+  width: 0;
+  height: 4px;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.24);
+}
+.indicator.third {
+  width: 33%;
+  transition: width 200ms 600ms;
+}
+.indicator.two-thirds {
+  width: 66%;
+  transition: width 200ms 600ms;
+}
+.indicator.full {
+  width: 100%;
+  background-color: #3597e9;
+  transition: width 200ms 600ms, background-color 100ms 600ms;
 }
 
 /*# sourceMappingURL=global.css.map */
