--- a/Mixpanel/Mobile App/assets/css/global.css
+++ b/Mixpanel/Mobile App/assets/css/global.css
@@ -6,12 +6,39 @@
   box-sizing: border-box;
 }
 
+@-webkit-keyframes slides {
+  0% {
+    transform: translateX(-227px);
+  }
+  10% {
+    transform: translateX(-227px);
+  }
+  13% {
+    transform: translateX(-488px);
+  }
+  40% {
+    transform: translateX(-488px);
+  }
+  43% {
+    transform: translateX(-750px);
+  }
+  80% {
+    transform: translateX(-750px);
+  }
+  83% {
+    transform: translateX(-1013px);
+  }
+  100% {
+    transform: translateX(-1013px);
+  }
+}
 body, html {
   -webkit-font-smoothing: antialiased;
   font-size: 100%;
   height: 100%;
   padding: 0;
   margin: 0;
+  background-color: #232933;
 }
 
 .hidden {
@@ -38,6 +65,16 @@ body, html {
 }
 
 /************ Typography STUFF ***********/
+.phone {
+  width: 384px;
+  height: 802px;
+  background: url(../img/phone.png) no-repeat;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  margin: -395px 0 0 -196px;
+}
+
 .device {
   width: 320px;
   height: 568px;
@@ -74,9 +111,9 @@ h1, h2, h3, h4, h5, h6, p {
   background-image: -ms-linear-gradient(-53deg, #081d46 0%, #156058 56%, #22a26a 100%);
 }
 .bg-gradient.purple {
-  background-image: -moz-linear-gradient(-53deg, #081d46 0%, #156058 56%, #22a26a 100%);
-  background-image: -webkit-linear-gradient(-53deg, #081d46 0%, #156058 56%, #22a26a 100%);
-  background-image: -ms-linear-gradient(-53deg, #081d46 0%, #156058 56%, #22a26a 100%);
+  background-image: -moz-linear-gradient(-53deg, #4a0046 0%, #251f5c 43%, #0d649b 100%);
+  background-image: -webkit-linear-gradient(-53deg, #4a0046 0%, #251f5c 43%, #0d649b 100%);
+  background-image: -ms-linear-gradient(-53deg, #4a0046 0%, #251f5c 43%, #0d649b 100%);
 }
 
 .bg-gradient.active {
@@ -94,6 +131,7 @@ h1, h2, h3, h4, h5, h6, p {
   background-size: cover;
   transform: scale(0.7);
   opacity: .5;
+  display: none;
 }
 
 .phone-wrap.ready {
@@ -104,9 +142,19 @@ h1, h2, h3, h4, h5, h6, p {
 
 .home {
   padding: 0 42px;
+  opacity: 0;
+  visibility: hidden;
   position: fixed;
   width: 100%;
   z-index: 1;
+  transform: translateY(-60px);
+}
+
+.home.good-to-go {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(-90px);
+  transition: opacity 200ms 150ms, visibility 0ms 150ms, transform 250ms 150ms;
 }
 
 input[type=text],
@@ -356,7 +404,7 @@ p {
   margin: 0;
   text-transform: uppercase;
   cursor: pointer;
-  position: fixed;
+  position: absolute;
 }
 
 .sign-in-bug {
@@ -373,7 +421,8 @@ p {
 }
 
 .intro-wrap .content {
-  position: fixed;
+  position: absolute;
+  z-index: 5;
   transform: translateY(290px);
 }
 
@@ -410,15 +459,47 @@ p {
   transform: translateY(310px);
 }
 
+.intro-time.see-yas {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 250ms 150ms, visibility 0ms 400ms;
+}
+
 .intro-time.active .step.one .content {
   opacity: 1;
   transform: translateY(290px);
-  transition: opacity 200ms 600ms, transform 350ms 600ms;
+  transition: opacity 200ms 750ms, transform 350ms 750ms;
+}
+
+.intro-time.active .step.one .content.go-away {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(310px);
+  transition: opacity 200ms 250ms, transform 350ms 250ms, visibility 0ms 600ms;
+}
+
+.intro-time .step.two {
+  visibility: hidden;
+}
+
+.intro-time .step.two .content {
+  opacity: 0;
+  transform: translateY(270px);
+}
+
+.intro-time.active.double .step.two {
+  visibility: visible;
+}
+
+.intro-time.active.double .step.two .content {
+  opacity: 1;
+  transform: translateY(250px);
+  transition: opacity 200ms 750ms, transform 350ms 750ms;
 }
 
 .intro-time.active .report {
   opacity: 1;
-  -webkit-transition: transform 600ms cubic-bezier(0, 0.055, 0, 1) 500ms, opacity 200ms 500ms;
+  -webkit-transition: transform 600ms cubic-bezier(0, 0.055, 0, 1) 850ms, opacity 200ms 850ms;
 }
 .intro-time.active .report.three {
   transform: translate3D(-20px, 112px, 0);
@@ -430,26 +511,196 @@ p {
   transform: translate3D(115px, 160px, 0);
 }
 
-.indicator {
+.step.one .icons.buh-bye .report {
   position: fixed;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: transform 600ms cubic-bezier(0, 0.055, 0, 1) 150ms, opacity 200ms 150ms, visibility 0ms 750ms;
+}
+.step.one .icons.buh-bye .report.three {
+  width: 184px;
+  transform: translate3D(-240px, 92px, 0);
+}
+.step.one .icons.buh-bye .report.two {
+  width: 164px;
+  transform: translate3D(68px, -170px, 0);
+}
+.step.one .icons.buh-bye .report.one {
+  width: 164px;
+  transform: translate3D(295px, 160px, 0);
+}
+
+.indicator {
+  position: absolute;
   width: 0;
-  height: 4px;
+  height: 5px;
   left: 0;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.24);
+  background-color: rgba(255, 255, 255, 0.34);
 }
-.indicator.third {
-  width: 33%;
-  transition: width 200ms 600ms;
-}
-.indicator.two-thirds {
-  width: 66%;
-  transition: width 200ms 600ms;
+.indicator.half {
+  width: 50%;
+  transition: width 200ms 900ms;
 }
 .indicator.full {
   width: 100%;
-  background-color: #3597e9;
-  transition: width 200ms 600ms, background-color 100ms 600ms;
+  transition: width 200ms 300ms;
+}
+
+.slides {
+  position: absolute;
+  width: 320px;
+  overflow: hidden;
+  height: 184px;
+  left: 0;
+  opacity: 0;
+  transform: translateY(56px);
+}
+
+.slides.active {
+  opacity: 1;
+  transform: translateY(36px);
+  transition: opacity 200ms 750ms, transform 250ms 750ms;
+}
+
+.sliders {
+  position: absolute;
+  transform: translateX(-227px);
+}
+
+.sliders.active {
+  -webkit-animation: slides 6s cubic-bezier(0, 0.24, 0.045, 0.985) infinite;
+}
+
+.event-wrap {
+  position: absolute;
+  width: 320px;
+  height: 568px;
+  transform: translate3D(50%, -50%, 0);
+  margin: -284px 0 0 -160px;
+  background: #F5F8FA;
+  -webkit-transition: transform 500ms cubic-bezier(0.855, 0.095, 0.925, 0.7);
+}
+.event-wrap.active {
+  transform: translate3D(50%, 50%, 0);
+  transition: transform 500ms cubic-bezier(0.585, 0.01, 0.98, 0.595);
+}
+
+.event-wrap .header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  background: #fff;
+  box-shadow: 0 1px 4px rgba(76, 87, 97, 0.19);
+  text-align: center;
+  padding: 40px 0 30px;
+  font-family: "din", sans-serif;
+}
+.event-wrap .header h2 {
+  font-size: 18px;
+  font-weight: 500;
+  color: #4c5761;
+  margin: 0 0 1px 0;
+}
+.event-wrap .header h4 {
+  font-size: 14px;
+  font-weight: 500;
+  color: #9ba7b1;
+  margin: 0;
+}
+
+.search {
+  background-color: #EBEEF1;
+  border-radius: 3px;
+  width: 300px;
+  margin: 124px auto 10px;
+  text-align: center;
+  font: 500 13px "din", sans-serif;
+  color: #9ba7b1;
+  padding: 9px 0 6px;
+}
+
+.mag {
+  width: 12px;
+  height: 12px;
+  position: relative;
+  top: 1px;
+  margin-right: 5px;
+}
+
+.event-wrap ul {
+  border-top: 1px solid #E1E4E9;
+  padding: 0 20px;
+  margin: 0 0 0 0;
+  list-style: none;
+  height: 402px;
+  overflow-y: scroll;
+}
+
+.event-wrap ul li {
+  font: 500 15px "din", sans-serif;
+  padding: 15px 0 11px;
+  color: #4c5761;
+  border-bottom: 1px solid #EBEEF1;
+  position: relative;
+  cursor: pointer;
+}
+
+.check {
+  position: absolute;
+  background: url(../img/check.png) no-repeat 0 -20px;
+  width: 20px;
+  height: 20px;
+  right: 0;
+  top: 12px;
+}
+.check.active {
+  background-position: 0 0;
+}
+
+.view-panels {
+  width: 100%;
+  position: fixed;
+  background: #2E95EC;
+  color: #fff;
+  font: 500 15px "din", sans-serif;
+  text-align: center;
+  padding: 16px 0 13px 0;
+  cursor: pointer;
+  transform: translateY(50px);
+  opacity: 0;
+  visibility: hidden;
+  bottom: 0;
+}
+.view-panels.active {
+  transform: translateY(0);
+  opacity: 1;
+  visibility: visible;
+  transition: transform 200ms cubic-bezier(0, 0.24, 0.045, 0.985), visibility 0ms, opacity 10ms;
+}
+
+.skip {
+  font: bold 14px/18px "din", sans-serif;
+  color: rgba(255, 255, 255, 0.5);
+  text-align: center;
+  display: block;
+  margin: 0;
+  text-transform: uppercase;
+  cursor: pointer;
+  position: absolute;
+}
+
+.dash {
+  opacity: 0;
+  visibility: hidden;
+  position: relative;
+  top: 115px;
+  left: 32px;
+}
+.dash.active {
+  opacity: 1;
+  visibility: visible;
+  transition: visibility 0ms, opacity 250ms 500ms;
 }
 
 /*# sourceMappingURL=global.css.map */
