--- a/Mixpanel/Mobile App/assets/css/global.scss
+++ b/Mixpanel/Mobile App/assets/css/global.scss
@@ -30,12 +30,23 @@ $din: 'din', sans-serif;
 }
 
 @mixin purplegradient {
-  background-image: -moz-linear-gradient( -53deg, rgb(8,29,70) 0%, rgb(21,96,88) 56%, rgb(34,162,106) 100%);
-  background-image: -webkit-linear-gradient( -53deg, rgb(8,29,70) 0%, rgb(21,96,88) 56%, rgb(34,162,106) 100%);
-  background-image: -ms-linear-gradient( -53deg, rgb(8,29,70) 0%, rgb(21,96,88) 56%, rgb(34,162,106) 100%);
+  background-image: -moz-linear-gradient( -53deg, rgb(74,0,70) 0%, rgb(37,31,92) 43%, rgb(13,100,155) 100%);
+  background-image: -webkit-linear-gradient( -53deg, rgb(74,0,70) 0%, rgb(37,31,92) 43%, rgb(13,100,155) 100%);
+  background-image: -ms-linear-gradient( -53deg, rgb(74,0,70) 0%, rgb(37,31,92) 43%, rgb(13,100,155) 100%);
 }
 
-body, html { -webkit-font-smoothing: antialiased; font-size: 100%; height: 100%; padding: 0; margin: 0;}
+@-webkit-keyframes slides {
+	0% { transform: translateX(-227px); }
+	10% { transform: translateX(-227px); }
+	13% { transform: translateX(-488px); }
+	40% { transform: translateX(-488px); }
+	43% { transform: translateX(-750px); }
+	80% { transform: translateX(-750px); }
+	83% { transform: translateX(-1013px); }
+	100% { transform: translateX(-1013px); }
+}
+
+body, html { -webkit-font-smoothing: antialiased; font-size: 100%; height: 100%; padding: 0; margin: 0; background-color: #232933; }
 
 .hidden {
 	display: none;
@@ -59,6 +70,16 @@ body, html { -webkit-font-smoothing: antialiased; font-size: 100%; height: 100%;
 }
 
 /************ Typography STUFF ***********/
+
+.phone {
+	width: 384px;
+	height: 802px;
+	background: url(../img/phone.png) no-repeat;
+	position: relative;
+	left: 50%;
+	top: 50%;
+	margin: -395px 0 0 -196px;
+}
 
 .device {
 	width: 320px;
@@ -110,6 +131,7 @@ h1, h2, h3, h4, h5, h6, p {
 	background-size: cover;
 	transform: scale(0.7);
 	opacity: .5;
+	display:none;
 }
 
 .phone-wrap.ready {
@@ -120,9 +142,19 @@ h1, h2, h3, h4, h5, h6, p {
 
 .home {
 	padding: 0 42px;
+	opacity: 0;
+	visibility: hidden;
 	position: fixed;
 	width: 100%;
 	z-index: 1;
+	transform: translateY(-60px);
+}
+
+.home.good-to-go {
+	opacity: 1;
+	visibility: visible;
+	transform: translateY(-90px);
+	transition: opacity 200ms 150ms, visibility 0ms 150ms, transform 250ms 150ms;
 }
 
 input[type=text],
@@ -377,7 +409,7 @@ p {
 	margin: 0;
 	text-transform: uppercase;
 	cursor: pointer;
-	position: fixed;
+	position: absolute;
 }
 
 .sign-in-bug {
@@ -393,8 +425,13 @@ p {
 	font-weight: normal;
 }
 
+.content {
+
+}
+
 .intro-wrap .content {
-	position: fixed;
+	position: absolute;
+	z-index: 5;
 	transform: translateY(290px);
 }
 
@@ -431,15 +468,47 @@ p {
 	transform: translateY(310px);
 }
 
+.intro-time.see-yas {
+	visibility: hidden;
+	opacity: 0;
+	transition: opacity 250ms 150ms, visibility 0ms 400ms;
+}
+
 .intro-time.active .step.one .content {
 	opacity: 1;
 	transform: translateY(290px);
-	transition: opacity 200ms 600ms, transform 350ms 600ms;
+	transition: opacity 200ms 750ms, transform 350ms 750ms;
+}
+
+.intro-time.active .step.one .content.go-away {
+	opacity: 0;
+	visibility: hidden;
+	transform: translateY(310px);
+	transition: opacity 200ms 250ms, transform 350ms 250ms, visibility 0ms 600ms;
+}
+
+.intro-time .step.two {
+	visibility: hidden;
+}
+
+.intro-time .step.two .content {
+	opacity: 0;
+	transform: translateY(270px);
+}
+
+.intro-time.active.double .step.two {
+	visibility: visible;
+}
+
+.intro-time.active.double .step.two .content {
+	opacity: 1;
+	transform: translateY(250px);
+	transition: opacity 200ms 750ms, transform 350ms 750ms;
 }
 
 .intro-time.active .report {
 	opacity: 1;
-	-webkit-transition: transform 600ms cubic-bezier(0.000, 0.055, 0.000, 1.000) 500ms, opacity 200ms 500ms;
+	-webkit-transition: transform 600ms cubic-bezier(0.000, 0.055, 0.000, 1.000) 850ms, opacity 200ms 850ms;
 	&.three {
 		transform: translate3D(-20px, 112px, 0);
 	}
@@ -451,24 +520,196 @@ p {
 	}
 }
 
-.indicator {
+.step.one .icons.buh-bye .report {
 	position: fixed;
+	opacity: 0;
+	visibility: hidden;
+	-webkit-transition: transform 600ms cubic-bezier(0.000, 0.055, 0.000, 1.000) 150ms, opacity 200ms 150ms, visibility 0ms 750ms;
+	&.three {
+		width: 184px;
+		transform: translate3D(-240px, 92px, 0);
+	}
+	&.two {
+		width: 164px;
+		transform: translate3D(68px, -170px, 0)
+	}
+	&.one {
+		width: 164px;
+		transform: translate3D(295px, 160px, 0);
+	}
+}
+
+.indicator {
+	position: absolute;
 	width: 0;
-	height: 4px;
+	height: 5px;
 	left: 0;
 	bottom: 0;
-	background-color: rgba(255,255,255,.24);
-	&.third {
-		width: 33%;
-		transition: width 200ms 600ms;
-	}
-	&.two-thirds {
-		width: 66%;
-		transition: width 200ms 600ms;
+	background-color: rgba(255,255,255,.34);
+	&.half {
+		width: 50%;
+		transition: width 200ms 900ms;
 	}
 	&.full {
 		width: 100%;
-		background-color: rgba(53,151,233,1);
-		transition: width 200ms 600ms, background-color 100ms 600ms;
+		transition: width 200ms 300ms;
+	}
+}
+
+.slides {
+	position: absolute;
+	width: 320px;
+	overflow: hidden;
+	height: 184px;
+	left: 0;
+	opacity: 0	;
+  transform: translateY(56px);
+}
+
+.slides.active {
+	opacity: 1;
+	transform: translateY(36px);
+	transition: opacity 200ms 750ms, transform 250ms 750ms;
+}
+
+.sliders {
+	position: absolute;
+	transform: translateX(-227px);
+}
+
+.sliders.active {
+	 -webkit-animation: slides 6s cubic-bezier(0.000, 0.240, 0.045, 0.985) infinite;
+}
+
+.event-wrap {
+	position: absolute;
+	width: 320px;
+	height: 568px;
+	transform: translate3D(50%,-50%,0);
+	margin: -284px 0 0 -160px;
+	background: #F5F8FA;
+	-webkit-transition: transform 500ms cubic-bezier(0.855, 0.095, 0.925, 0.700);
+	&.active {
+		transform: translate3D(50%,50%,0);
+		transition: transform 500ms cubic-bezier(0.585, 0.010, 0.980, 0.595);
+	}
+}
+
+.event-wrap .header {
+	width: 100%;
+	position: fixed;
+	top: 0;
+	background: #fff;
+	box-shadow: 0 1px 4px rgba(76,87,97, .19);
+	text-align: center;
+	padding: 40px 0 30px;
+	font-family: $din;
+
+	h2 {
+		font-size: 18px;
+		font-weight: 500;
+		color: #4c5761;
+		margin: 0 0 1px 0;
+	}
+	h4 {
+		font-size: 14px;
+		font-weight: 500;
+		color: #9ba7b1;
+		margin: 0;
+	}
+}
+
+.search {
+	background-color: #EBEEF1;
+	border-radius: 3px;
+	width: 300px;
+	margin: 124px auto 10px;
+	text-align: center;
+	font: 500 13px $din;
+	color: #9ba7b1;
+	padding: 9px 0 6px;
+}
+
+.mag {
+	width: 12px;
+	height: 12px;
+	position: relative;
+	top: 1px;
+	margin-right: 5px;
+}
+
+.event-wrap ul {
+	border-top: 1px solid #E1E4E9;
+	padding: 0 20px;
+	margin: 0 0 0 0;
+	list-style: none;
+	height: 402px;
+	overflow-y: scroll;
+
+}
+
+.event-wrap ul li {
+	font: 500 15px $din;
+	padding: 15px 0 11px;
+	color: #4c5761;
+	border-bottom: 1px solid #EBEEF1;
+	position: relative;
+	cursor: pointer;
+}
+
+.check {
+	position: absolute;
+	background: url(../img/check.png) no-repeat 0 -20px;
+	width: 20px;
+	height: 20px;
+	right: 0;
+	top: 12px;
+	&.active {
+		background-position: 0 0;
+	}
+}
+
+.view-panels {
+	width: 100%;
+	position: fixed;
+	background: #2E95EC;
+	color: #fff;
+	font: 500 15px $din;
+	text-align: center;
+	padding: 16px 0 13px 0;
+	cursor: pointer;
+	transform: translateY(50px);
+	opacity: 0;
+	visibility: hidden;
+	bottom: 0;
+	&.active {
+		transform: translateY(0);
+		opacity: 1;
+		visibility: visible;
+		transition: transform 200ms cubic-bezier(0.000, 0.240, 0.045, 0.985), visibility 0ms, opacity 10ms;
+	}
+}
+
+.skip {
+	font: bold 14px/18px $din;
+	color: rgba(255,255,255,.50);
+	text-align: center;
+	display: block;
+	margin: 0;
+	text-transform: uppercase;
+	cursor: pointer;
+	position: absolute;
+}
+
+.dash {
+	opacity: 0;
+	visibility: hidden;
+	position: relative;
+	top: 115px;
+	left: 32px;
+	&.active {
+		opacity: 1;
+		visibility: visible;
+		transition: visibility 0ms, opacity 250ms 500ms;
 	}
 }
