--- a/Mixpanel/+wireframe_template/assets/css/global.css
+++ b/Mixpanel/+wireframe_template/assets/css/global.css
@@ -354,6 +354,20 @@ a.x:before {
   transform: translate3D(-50%, -50%, 0);
 }
 
+.templatefooter {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background: rgba(255, 255, 255, 0.7);
+  text-align: center;
+}
+.templatefooter a {
+  vertical-align: middle;
+  font-size: 12px;
+  line-height: 40px;
+}
+
 .account {
   float: right;
 }
