--- a/Mixpanel/+wireframe_template/assets/css/_components.scss
+++ b/Mixpanel/+wireframe_template/assets/css/_components.scss
@@ -27,7 +27,7 @@ $blue3: rgb(230,233,239);
 
 .wrapper {
 	width: 1150px;
-	margin: 0 auto;
+	margin: 0 auto 50px;
 	position: relative;
 	border-radius: 3px;
 	box-shadow: 0 1px 10px rgba(0,0,0,.08);
