--- a/Mixpanel/+wireframe_template/assets/css/_components.scss
+++ b/Mixpanel/+wireframe_template/assets/css/_components.scss
@@ -230,6 +230,16 @@ tab {
 			background: $grey1;
 		}
 	}
+	&.med {
+		background: $blue1;
+		color: $text1;
+		&:after {
+			border-top: 4px solid $text1;
+		}
+		&:hover {
+			background: #fff;
+		}
+	}
 	&.nobounds {
 		background: transparent;
 		box-shadow: none;
@@ -271,7 +281,8 @@ tab {
 	white-space: nowrap;
 }
 
-.drop.light .list {
+.drop.light .list,
+.drop.med .list {
 	background: #fff;
 	a:hover {
 		background: $blue1;
@@ -331,6 +342,67 @@ button {
 		&:hover {
 		border: 2px solid rgba(0,0,0,.75);
 		color: rgba(0,0,0,.75);
+		}
+	}
+}
+
+.plusButton {
+	background: $blue1;
+	width: 33px;
+	height: 33px;
+	border-radius: 30em;
+	position: relative;
+	margin: 16px 0 0 5px;
+	cursor: pointer;
+	&::after,
+	&::before {
+		background: $grey2;
+		display: block;
+		content: "";
+		border-radius: 5px;
+		position: absolute;
+	}
+	&::before {
+		width: 15px;
+		height: 3px;
+		top: 15px;
+		left: 9px;
+	}
+	&::after {
+		width: 3px;
+		height: 15px;
+		top: 9px;
+		left: 15px;
+	}
+	&:hover {
+		box-shadow: 0 1px 8px rgba(0,0,0,.15);
+		background: $blue2;
+	}
+	&.small {
+		width: 16px;
+		height: 16px;
+		margin: 5px 0 0 10px;
+		background: $grey2;
+		display: none;
+		vertical-align: middle;
+		&::before,
+		&::after {
+			background: $blue2;
+		}
+		&::before {
+			width: 10px;
+			height: 2px;
+			left: 3px;
+			top: 7px;
+		}
+		&::after {
+			width: 2px;
+			height: 10px;
+			left: 7px;
+			top: 3px;
+		}
+		&:hover {
+			background: $text2;
 		}
 	}
 }
