--- a/Personal/Tables/assets/css/global.css
+++ b/Personal/Tables/assets/css/global.css
@@ -325,6 +325,10 @@ th {
 .pull-right .dropdown-menu {
   right: 0;
   left: auto;
+  position: absolute;
+  z-index: 1;
+  background: #fff;
+  list-style: none;
 }
 
 /* calculate scrollbar width */
@@ -368,6 +372,10 @@ div.fixed-table-scroll-outer {
 
 .bootstrap-table .table-hover > tbody > tr.hover > td {
   background-color: #f5f5f5;
+}
+
+tr:nth-child(even) {
+  background: #ECEEF1;
 }
 
 /*# sourceMappingURL=global.css.map */
